# wasix-integration-tests

./: README.md
.github/workflows/: ci.yml
rust/hyper-client/: Cargo.toml
rust/hyper-client/src/: main.rs
rust/simple/examples/: helloworld.rs  spawn_threads_and_sleep.rs  tcp_client.rs  tcp_http_get.rs
rust/simple/src/: lib.rs
rust/simple/tests/: a.rs
rust/ureq-http-client/: Cargo.toml
rust/ureq-http-client/src/: main.rs
simple/: Cargo.toml
simple/examples/: helloworld.rs
simple/src/: lib.rs
simple/tests/: a.rs
snapshots/: Cargo.toml
snapshots/src/: lib.rs
snapshots/src/snapshots/: wasix_integration_tests__tests__condvar.snap  wasix_integration_tests__tests__dash.snap  wasix_integration_tests__tests__example_multi_threading.snap  wasix_integration_tests__tests__example_tcp_client.snap  wasix_integration_tests__tests__fork_longjump.snap
wasm/: example-execve.wasm  example-spawn.wasm
