[package]
name = "wasix-integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { version = "1.21.0", features = ["yaml"] }
serde = { version = "1.0.147", features = ["derive"] }
xshell = "0.2.2"
