[package]
name = "hyper-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/john-sharratt/tokio", branch = "wasix", features = ["rt", "macros"] }
hyper = {git = "https://github.com/wasmerio/hyper", branch = "wasix", features = ["client", "http1", "tcp"]}
